// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders snapshot of disabled 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 0.6;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 14px;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-2 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <select
    aria-invalid="false"
    class="emotion-1"
    disabled=""
  >
    <option
      value="python"
    >
      Python
    </option>
    <option
      value="sql"
    >
      SQL
    </option>
  </select>
  <div
    class="emotion-2"
  >
    <svg
      aria-hidden="true"
      height="16"
      viewBox="0 0 18 18"
      width="16"
    >
      <path
        d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select renders snapshot of inverted 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 14px;
  color: #FFFFFF;
  background-color: #213147;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-2 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #FFFFFF;
}

<div
  class="emotion-0"
>
  <select
    aria-invalid="false"
    class="emotion-1"
  >
    <option
      value="python"
    >
      Python
    </option>
    <option
      value="sql"
    >
      SQL
    </option>
  </select>
  <div
    class="emotion-2"
  >
    <svg
      aria-hidden="true"
      height="16"
      viewBox="0 0 18 18"
      width="16"
    >
      <path
        d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select renders snapshot of placeholder, when value is set to empty string 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 14px;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
  color: #65707C;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-2 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <select
    aria-invalid="false"
    class="emotion-1"
  >
    <option
      value=""
    >
      Placeholder
    </option>
    <option
      value="python"
    >
      Python
    </option>
    <option
      value="sql"
    >
      SQL
    </option>
  </select>
  <div
    class="emotion-2"
  >
    <svg
      aria-hidden="true"
      height="16"
      viewBox="0 0 18 18"
      width="16"
    >
      <path
        d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select renders snapshot of required with error 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 14px;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
  color: #65707C;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-2 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <select
    aria-invalid="false"
    class="emotion-1"
    required=""
  >
    <option
      value=""
    >
      Select appropriate technology...
    </option>
    <option
      value="python"
    >
      Python
    </option>
    <option
      value="sql"
    >
      SQL
    </option>
  </select>
  <div
    class="emotion-2"
  >
    <svg
      aria-hidden="true"
      height="16"
      viewBox="0 0 18 18"
      width="16"
    >
      <path
        d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select renders snapshot of size large 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  height: 48px;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 14px;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 16px;
  padding-right: 40px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-2 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 16px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <select
    aria-invalid="false"
    class="emotion-1"
  >
    <option
      value="python"
    >
      Python
    </option>
    <option
      value="sql"
    >
      SQL
    </option>
  </select>
  <div
    class="emotion-2"
  >
    <svg
      aria-hidden="true"
      height="16"
      viewBox="0 0 18 18"
      width="16"
    >
      <path
        d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select renders snapshot of size medium 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  height: 36px;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 14px;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-2 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <select
    aria-invalid="false"
    class="emotion-1"
  >
    <option
      value="python"
    >
      Python
    </option>
    <option
      value="sql"
    >
      SQL
    </option>
  </select>
  <div
    class="emotion-2"
  >
    <svg
      aria-hidden="true"
      height="16"
      viewBox="0 0 18 18"
      width="16"
    >
      <path
        d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Select renders snapshot of size small 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  height: 28px;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: pointer;
  font-size: 12px;
  color: #05192D;
  background-color: #FFFFFF;
  padding-left: 12px;
  padding-right: 32px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-2 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

<div
  class="emotion-0"
>
  <select
    aria-invalid="false"
    class="emotion-1"
  >
    <option
      value="python"
    >
      Python
    </option>
    <option
      value="sql"
    >
      SQL
    </option>
  </select>
  <div
    class="emotion-2"
  >
    <svg
      aria-hidden="true"
      height="14"
      viewBox="0 0 18 18"
      width="14"
    >
      <path
        d="m8.244 12.155-4.95-4.947a1 1 0 1 1 1.415-1.415l4.294 4.291 4.293-4.279a.998.998 0 0 1 1.413.003c.39.392.388 1.025-.003 1.415l-5.002 4.986a.998.998 0 0 1-1.46-.054Z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
